--- a/still.css
+++ b/still.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-image: linear-gradient(to right, rgb(14, 13, 13), rgb(0,0,0), rgb(14, 13, 13));
+    background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(0, 0, 0));
 }
 
 h1 {
@@ -23,7 +23,9 @@ h1 {
 h3 {
     font-family: llamatxt;
     text-align: center;
-    color: #ffffff;
+    background: linear-gradient(to right, blue, orange);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 .nebula {
@@ -53,6 +55,7 @@ h3 {
 .cl {
     display: flex;
     justify-content: flex-start;
+    margin-top: 20px;
 }
 
 .cl img {
@@ -62,4 +65,21 @@ h3 {
 .lc {
     display: flex;
     justify-content: space-evenly;
+    margin-top: 20px;
+}
+
+.armanno {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
+}
+
+.armanno img {
+    border-radius: 20px;
+}
+
+.ls {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
 }
