--- a/still.css
+++ b/still.css
@@ -1,117 +1,3 @@
-@font-face {
-    font-family: llamatxt;
-    src: url(other/SyneMono-Regular.ttf);
-}
-
-@font-face {
-    font-family: spacetxt;
-    src: url(other/origin.ttf);
-}
-
-body {
-    background-image: linear-gradient(to right, #416db4, #dca308);
-}
-
-h1 {
-    font-family: spacetxt;
-    font-size: 70px;
-    text-align: center;
-    margin-top: -4px;
-    color: black;
-}
-
-h3 {
-    font-family: llamatxt;
-    text-align: center;
-    background: black;
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-}
-
-.nebula {
-    display:flex;
-    justify-content: space-evenly;
-}
-
-.scene {
-    display: flex;
-    justify-content: flex-start;
-    margin-top: 20px;
-}
-
-.scene img {
-    border-radius: 20px;
-}
-
-.frost {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.frost img {
-    border-radius: 20px;
-}
-
-.cl {
-    display: flex;
-    justify-content: flex-start;
-    margin-top: 20px;
-}
-
-.cl img {
-    border-radius: 20px;
-}
-
-.lc {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 20px;
-}
-
-.armanno {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 20px;
-}
-
-.armanno img {
-    border-radius: 20px;
-}
-
-.ls {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 20px;
-}
-
-.scenet {
-    color: black;
-    font-family: spacetxt;
-    font-size: 48px;
-    padding-left: 290px;
-    padding-top: 150px;
-}
-
-.frostt {
-    color: black;
-    font-family: spacetxt;
-    font-size: 48px;
-    padding-right: 380px;
-    padding-top: 240px;
-}
-
-.clt {
-    color: black;
-    font-family: spacetxt;
-    font-size: 48px;
-    padding-left: 220px;
-    padding-top: 190px;
-}
-
-.arm {
-    color: black;
-    font-family: spacetxt;
-    font-size: 48px;
-    padding-right: 240px;
-    padding-top: 240px;
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:05ce051700da3ade819d525596c6b3edbcdc5843a147ceeda2d9b93e4aef36f5
+size 1848
