--- a/abtme.css
+++ b/abtme.css
@@ -1,21 +1,3 @@
-@font-face {
-    font-family: llama;
-    src: url(other/SyneMono-Regular.ttf);
-}
-
-@font-face {
-    font-family: spacet;
-    src: url(other/origin.ttf);
-}
-
-h1 {
-    font-family: spacet;
-    font-size: 70px;
-    text-align: center;
-    margin-top: -4px;
-}
-
-h3 {
-    font-family: llama;
-    text-align: center;
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:11a260f7d2ecd53a2818cb08dfa1e544d52c561e049ada03fd291f9af78ab6b4
+size 329
